--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # Core ML and Scientific Computing
 numpy>=1.21.0
-torch>=1.9.0
+torch>=1.9.0  # Supports both DQN and GNN-DQN architectures
 
 # Progress bars and CLI utilities
 tqdm>=4.62.0
